vuex store added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
 <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
+<script src="https://unpkg.com/vuexfire"></script>
   <title>F4rr3ll Blog</title>
 </head>
 
